# Warden

./: CMakeLists.txt  README.md  app.py
cli/: commands.py
core/: crypto.py  manager.py  storage.py
include/cli/: cli.hpp
include/core/: manager.hpp  storage.hpp
include/utils/: generator.hpp
src/: main.cpp
src/cli/: cli.cpp
src/core/: manager.cpp  storage.cpp
src/utils/: generator.cpp
utils/: generator.py  validation.py
